--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">CommonAdapter</string>
+    <string name="single_base">SingleBaseAdapterActivity</string>
+    <string name="common_base">CommonBaseAdapterActivity</string>
+    <string name="single_recycler">SingleRecyclerViewAdapterActivity</string>
+    <string name="common_recycler">CommonRecyclerViewAdapterActivity</string>
 </resources>
