--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">MultiTypeAdapter</string>
-    <string name="taobao">淘宝首页效果</string>
-    <string name="one2many">朋友圈效果</string>
+    <string name="taobao">淘宝首页效果(基本用法)</string>
+    <string name="one2many">朋友圈效果(一对多)</string>
+    <string name="basis">用法展示</string>
 </resources>
